Fix javadoc